[MODORDERS-1143] Revert back to modifiable lists